# whr-converter

./: .gitignore  connector.ipynb  fhir_to_hl7_converter.py  json_to_hl7_converter.py  main.py  proprietary.ipynb  pyproject.toml  ui.spec
.github/workflows/: main.yml
src/whr_converter/: fhir_to_hl7.py  medirecords_client.py  pyinstaller.py  ui.py
