[project]
name = "whr-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya Beda",email = "ir4y.ix@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fhirpy-types-r4b (>=0.1.1,<0.2.0)",
    "fhirpy (>=2.2.0,<3.0.0)",
    "fhirpathpy (>=2.1.0,<3.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "hl7apy (>=1.3.5,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "funcy (>=2.0,<3.0)",
    "pyside6 (>=6.10.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "whr_converter", from = "src"}]


[tool.poetry.group.dev.dependencies]
autohooks = "^25.4.1"
autohooks-plugin-black = "^23.10.0"
autohooks-plugin-ruff = "^25.3.1"
autohooks-plugin-mypy = "^23.10.0"
ruff = "^0.14.0"
mypy = "^1.18.2"
black = "^25.9.0"
jupyterlab = "^4.4.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
